# zgate

./: .dockerignore  .env.example  .gitignore  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  bunfig.toml  docker-compose.yml  eslint.config.mjs  globals.d.ts  next.config.ts  package.json  prisma.config.ts  tsconfig.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
docs/: ADMIN.md  ARCHITECTURE.md  COMBO.md  PROVIDERS.md  RTK.md  TASKS.md
docs/api/: API.md
docs/deployment/: DEPLOY.md
docs/email/: EMAIL.md
emails/: BanNotificationEmail.tsx  BroadcastEmail.tsx  OtpEmail.tsx  PasswordResetEmail.tsx  WelcomeEmail.tsx  plaintext.test.tsx  plaintext.ts  subjects.ts  templates.test.tsx  theme.ts
emails/components/: EmailLayout.tsx  ui.tsx
open-sse/config/: modelCapabilities.ts  modelFetchConfig.ts  providerEndpoints.ts  providerModels.ts
open-sse/executors/: antigravity.ts  azure.ts  base.ts  cloudflareAi.ts  codex.ts  commandcode.ts  cursor.ts  deepseek.ts  default.ts  gemini.ts  geminiCli.ts  github.ts  (+8 more)
prisma/: schema.prisma
rtk/: Cargo.toml
rtk/src/: autodetect.rs  caveman.rs  compress.rs  lib.rs  main.rs
rtk/src/filters/: build_output.rs  dedup_log.rs  find.rs  git_diff.rs  git_log.rs  git_status.rs  grep.rs  ls.rs  mod.rs  read_numbered.rs  search_list.rs  smart_truncate.rs  tree.rs
rtk/tests/: cli.rs  property.rs
scripts/: docker-entrypoint.sh  seed.ts  test-setup.ts
src/: middleware.ts  proxy.ts
(+84 files in other folders)
