[package]
name = "rtk"
version = "0.1.0"
edition = "2021"
description = "ZGate RTK engine — compresses tool_result blocks in input messages before they are sent to a provider. See docs/RTK.md."

[[bin]]
name = "rtk"
path = "src/main.rs"

[lib]
name = "rtk"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
regex = "1"
once_cell = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
